# milk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add_cap.sh  bump_version.sh  config  config.md  fetch_chai_dev.sh  fetch_milk_dev.sh  fits.py  hosts.md  lstopo.txt  pull_all.sh  requirements.txt  setup_chai_dev.sh  setup_net_snmp.sh
src/: CLImain.cc  milk_config.h
src/COREMOD_arith/: CMakeLists.txt  execute_arith.c
src/COREMOD_iofits/: CMakeLists.txt  loadmemstream.c  savefits.c
src/COREMOD_memory/: CMakeLists.txt  fps_create.c  fps_list.c  image_keyword_addS.c  image_mk_complex_from_amph.c  list_image.c  logshmim.c  shmimlog.c  stream_TCP.c  stream_UDP.c  stream_diff.c  stream_halfimdiff.c  stream_paste.c  stream_pixmapdecode.c  stream_poke.c  stream_updateloop.c
src/COREMOD_memory/scripts/: milk-shmimpoke-semtrig
src/COREMOD_tools/: CMakeLists.txt
src/CommandLineInterface/: CLIcore.c  CLIcore.h  CLIcore_help.c  CLIcore_modules.c  CLIcore_signals.c  CLIcore_utils.h  CMakeLists.txt  TUItools.c  fpsCTRL_TUI_process_user_key.c  fps_GetTypeString.c  fps_add_entry.c  fps_getFPSargs.c  fps_outlog.c  fps_processcmdline.c  procCTRL_TUI.c  streamCTRL.c  streamCTRL_TUI.c
src/CommandLineInterface/CLIcore/: CLIcore_help.c  CLIcore_modules.c  CLIcore_signals.c  CLIcore_utils.h
src/CommandLineInterface/fps/: fps_GetFileName.c  fps_add_entry.c  fps_disconnect.c  fps_getFPSargs.c  fps_outlog.c  fps_paramvalue.c  fps_processcmdline.c  fps_scan.c
src/CommandLineInterface/fpsCTRL/: fpsCTRL_TUI.c  fpsCTRL_TUI_process_user_key.c
src/CommandLineInterface/procCTRL/: procCTRL_TUI.c  procCTRL_processinfo_scan.c
src/CommandLineInterface/processinfo/: processinfo_signals.c
src/CommandLineInterface/streamCTRL/: streamCTRL_TUI.c  streamCTRL_find_streams.c  streamCTRL_print_procpid.c  streamCTRL_scan.c  streamCTRL_utilfuncs.c
src/milk_module_example/: CMakeLists.txt
